<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Card Safe</string>
    <string name="status">Tap your card to open to the safe</string>
    <string name="guide">Your Card is the \"KEY\"</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="info">Your matriculation card Info will be shown here.</string>

    <!--Guide-->
    <string name="howto">Save and retrieve data, using your cards.\n
        1. Tap a card to set up a new "card safe"\n
        2. Give it a name and some data\n
           (The data is stored in the phone)\n
        3. Tap the same card to get back the data\n
        4. Set up multiple card safes using different cards</string>
    <!--Action Bar Related-->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_howto">How-To</string>
    <string name="settings">Currently there are no settings available</string>

    <!--Bottom Texts-->
    <string name="warning">        Warning:\n
        Please use this app at your own risks\n
        The dev is not responsible for any consequences directly or indirectly resulted from using this app</string>
    <string name="credit">        Developed by Zhu Liang for personal uses only</string>
    <string name="disclaimer">Disclaimer:\nThis app is not affiliated to or in any ways associated with any organizations</string>

    <!--Buttons-->
    <string name="button_modify">Modify the safe</string>
    <string name="button_leave">Leave the safe</string>

    <!--Safe related-->
    <string name="new_safe_title">Set up new Card Safe</string>
    <string name="modify_safe_title">Modify the Card Safe</string>
    <string name="safe_title">Name this Card Safe\neg. A School/B Bank</string>
    <string name="content_title">Info to associate with this card\n
        eg. Hints for your password/Notes about this card\n
        (Data is safely stored on the phone)</string>

</resources>
